# musicgen-mlx

./: .gitignore  LICENSE  Makefile  README.md  article-medium.md  generate.py  pyproject.toml  requirements.txt
audiocraft_mlx/: __init__.py
audiocraft_mlx/models/: __init__.py
